syntax = "proto3";

                 package playerchoiceResponseRewardItem;
service PlayerchoiceResponseRewardItemService {
 rpc createPlayerchoiceResponseRewardItem (PlayerchoiceResponseRewardItemCreateInput) returns (PlayerchoiceResponseRewardItem) {}
rpc playerchoiceResponseRewardItems (findManyParams) returns (stream PlayerchoiceResponseRewardItem) {}
rpc playerchoiceResponseRewardItem (PlayerchoiceResponseRewardItemWhereUniqueInput) returns (PlayerchoiceResponseRewardItem) {}
rpc updatePlayerchoiceResponseRewardItem (PlayerchoiceResponseRewardItemUpdateInput) returns (PlayerchoiceResponseRewardItem) {}
rpc deletePlayerchoiceResponseRewardItem (PlayerchoiceResponseRewardItemWhereUniqueInput) returns (PlayerchoiceResponseRewardItem) {} 
 }
message PlayerchoiceResponseRewardItemCreateInput {
string createdAt = 1;
string id = 2;
string updatedAt = 3;
};
message PlayerchoiceResponseRewardItem {
string createdAt = 1;
string id = 2;
string updatedAt = 3;
};
message PlayerchoiceResponseRewardItemWhereUniqueInput {
string createdAt = 1;
string id = 2;
string updatedAt = 3;
};
message PlayerchoiceResponseRewardItemUpdateInput {
string createdAt = 1;
string id = 2;
string updatedAt = 3;
};
message findManyParams {

};